<resources>
    <string name="app_name">MeuCV</string>
    <string name="Kotlin_text">Olá! Comecei estudar programação na faculdade de Sistemas de informação e com isso despertei um amor em desenvolvimento mobile e hoje sou estudante de Kotlin nas áreas mobile e back-end. Já tive experiência com springboot em uma criação de uma Api para fazer a conexão de um app com banco de dados Mysql, fiz também a utilização do firebase para autenticação do usuário e implementação do sistemas de google maps via fragmente.</string>
    <string name="Job">Developer Mobile Kotlin</string>
    <string name="Kotlin_text2">Trabalho hoje em um Supermercado na área de contabilidade, onde faço as funções de cadastramentos de produtos nos sistema,  notas e verificação de notas dos caixas.</string>
    <string name="marcos_nand">Marcos André</string>
    <string name="formacao">Sou Formado em Sistemas de informação, onde iniciei o curso em 2018 e finalizei em dezembro de 2021.</string>
    <string name="trabalho_atual">Trabalho Atual</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="experi_mcia_profissional">Experiência Profissional</string>
    <string name="cursos">Aqui esta a lista de cursos que sou certificado, tem cursos de programação, metodo agil, banco de dados e entre varios outros.</string>
    <string name="curso_Kotlin1">Dê os primeiros passos no aprendizado da linguagem Kotlin \n
    °Conteúdo \n
        °História básica da computação e noções de lógica de programação \n
        °Configuração de ambiente de desenvolvimento e conceitos iniciais sobre Kotlin \n
        °Como Kotlin funciona na JVM \n
        °Variáveis, funções, controle de fluxo \n
        °Criação de projeto Kotlin + Java Swing \n
        °Conceitos iniciais de Android e criação de uma aplicação simples \n
    </string>
    <string name="nome_do_projeto">Nome do Projeto</string>
    <string name="descri_o_do_projeto">Descrição do Projeto</string>
</resources>